Optimized imports, tests